--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,8 +1,16 @@
 <html>
 <head>
 	<title>Test Page</title>
+	<link rel="stylesheet" type="text/css" href="../css/main.css"  />
 </head>
 <body>
+	<nav>
+		<button class="hamburger-button" type="button">
+			<svg viewBox="0 0 24 24">
+					<path fill="currentColor" d="M3,6H21V8H3V6M3,11H21V13H3V11M3,16H21V18H3V16Z" />
+			</svg>
+		</button>
+	</nav>
 Begin here (or replace this with any static code already written).
 </body>
 </html>
