--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,8 +1,49 @@
 <html>
 <head>
-	<title>Test Page</title>
+	<title>7 - A Social Technology for Student to Form a Study Group</title>
+	<script src="https://code.jquery.com/jquery.js"></script>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link href="/css/bootstrap.min.css" rel="stylesheet">
+	<link href="/css/bootstrap-theme.min.css" rel="stylesheet">
+	
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+	<script src="/js/bootstrap.min.js"></script>
+	<link href="/css/main.css" rel="stylesheet">
 </head>
 <body>
-Begin here (or replace this with any static code already written).
+	<div class="container">
+		<div class="row title">
+			<div class="col-sm">
+    		</div>
+			<div class="col-sm d-flex justify-content-center">
+				<h1>Hello Jason</h1>
+			</div>
+			<div class="col-sm">
+			</div>
+			
+		</div>
+		<div class="row">
+			<div class="col-sm">
+    		</div>
+			<div class="col-sm d-flex justify-content-center">
+				<h3>Do you want to finished unwatched videos?</h3>
+			</div>
+			<div class="col-sm">
+			</div>
+			
+		</div>
+		<div class="row video-box">
+			<div class="card">
+  				<div class="card-header">
+    				Featured
+  				</div>
+				<div class="card-body">
+					<h5 class="card-title">Special title treatment</h5>
+					<p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+					<a href="#" class="btn btn-primary">Watch</a>
+				</div>
+			</div>
+		</div>
+	</div>
 </body>
 </html>
