--- a/views/menu.handlebars
+++ b/views/menu.handlebars
@@ -7,47 +7,34 @@
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
 	<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.6.0/dist/umd/popper.min.js" integrity="sha384-KsvD1yqQ1/1+IA7gi3P0tyJcT3vR+NdBTt13hSJ2lnve8agRGXTTyNaBYmCR/Nwi" crossorigin="anonymous"></script>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.min.js" integrity="sha384-nsg8ua9HAw1y0W1btsyWgBklPnCUAFLuTMS2G72MMONqmOymq585AcH49TLBQObG" crossorigin="anonymous"></script>
+	<script src="/js/bootstrap.min.js"></script>
 	<link href="/css/main.css" rel="stylesheet">
 </head>
 <body>
 	<div class="container">
 		<div class="row title">
-			<div class="col-sm d-flex align-items-center justify-content-start">
-				<a class="btn btn-warning " href="/menu" role="button">Menu</a>
-    		</div>
 			<div class="col-sm d-flex justify-content-center">
-				<h1>Hello Jason</h1>
+				<h1>Menu</h1>
 			</div>
-			<div class="col-sm">
-			</div>
-			
 		</div>
-		<div class="row">
+        {{#each menu}}
+		<div class="row menu-item">
 			<div class="col-2">
     		</div>
 			<div class="col-sm d-flex justify-content-center">
-				<h3>Do you want to finished unwatched videos?</h3>
+                <a class="btn btn-warning btn-lg" href={{src}} role="button">{{title}}</a>
 			</div>
 			<div class="col-2">
 			</div>
 			
 		</div>
-		{{#each videos}}
-		<div class="row video-box">
-			<div class="d-flex justify-content-center">
-				<div class="card" style="width: 30rem;">
-					<div class="card-header">
-						{{title}}
-					</div>
-					<img src={{img}} class="img-thumbnail">
-					<div class="card-body">
-						<h5 class="card-title">{{name}}</h5>
-						<p class="card-text">{{professor-name}}</p>
-						<a href={{src}} class="btn btn-primary">Watch</a>
-					</div>
-				</div>
-			</div>
-		</div>
-		{{/each}}
+        {{/each}}
+        <div class="row">
+                
+            <div class="col-2">
+                <a class="btn btn-warning bckBtn" href="/" role="button">Back</a>
+            </div>
+        </div>
+	</div>
 </body>
 </html>
