--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -2,7 +2,7 @@
 <html>    
 <head>    
     <title>Login Form</title>    
-    <link rel="stylesheet" href="css/style.css">    
+    <link rel="stylesheet" href="css/login.css">    
 </head>    
 <body>    
     <h2>Login Page</h2><br>    
