--- a/public/css/login.css
+++ b/public/css/login.css
@@ -1,22 +1,13 @@
 body  
 {  
-    margin: 0;  
-    padding: 0;  
-    background-color:#FFFFFF;  
     font-family: 'Arial';  
 }  
-.login{  
-        width: 382px;  
-        overflow: hidden;  
-        margin: auto;  
-        margin: 20 0 0 450px;  
+#login{  
         padding: 80px;  
         background: #FFD700;  
         border-radius: 15px ;  
-          
 }  
-h2{  
-    text-align: center;  
+h1{  
     color: #FFD700;  
     padding: 20px;  
 }  
@@ -24,36 +15,27 @@ label{
     color: #FFFFFF;  
     font-size: 17px;  
 }  
-#Uname{  
-    width: 300px;  
-    height: 30px;  
+
+#Uname, #Pass{  
     border: none;  
     border-radius: 3px;  
-    padding-left: 8px;  
-}  
-#Pass{  
-    width: 300px;  
-    height: 30px;  
-    border: none;  
-    border-radius: 3px;  
-    padding-left: 8px;  
-      
 }  
 #log{  
-    width: 300px;  
-    height: 30px;  
     border: none;  
     border-radius: 17px;  
-    padding-left: 7px;  
-    color: blue;  
-  
-  
 }  
-span{  
-    color: white;  
-    font-size: 17px;  
-}  
-a{  
-    float: right;  
+-a{  
     background-color: grey;  
 }  
+
+.form-group {
+    margin-bottom: 1em;
+}
+
+.form-group label {
+    font-weight: bold;
+} 
+
+p {
+    display: inline-block;
+}
