--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -8,22 +8,20 @@
     <h2>Login Page</h2><br>    
     <div class="login">    
     <form id="login" method="get" action="login.php">    
-        <label><b>User Name     
-        </b>    
-        </label>    
-        <input type="text" name="Uname" id="Uname" placeholder="Username">    
-        <br><br>    
-        <label><b>Password     
-        </b>    
-        </label>    
-        <input type="Password" name="Pass" id="Pass" placeholder="Password">    
-        <br><br>    
-        <input type="button" name="log" id="log" value="Log In Here">       
-        <br><br>    
-        <input type="checkbox" id="check">    
-        <span>Remember me</span>    
-        <br><br>    
-        Forgot <a href="#">Password</a>    
+        <div class="form-group">
+            <label><b>User Name</b></label>    
+            <input type="text" name="Uname" id="Uname" class="form-control" placeholder="Username">    
+        </div>
+        <div class="form-group">
+            <label><b>Password</b></label>    
+            <input type="Password" name="Pass" id="Pass" class="form-control"placeholder="Password">    
+        </div>
+        <input type="button" name="log" id="log" class="form-control" value="Log In Here">       
+        <div class="form-check">
+            <input type="checkbox" id="check" class="form-control">    
+            <span>Remember me</span>    
+        </div>
+        <p>Forgot <a href="#">Password</a></p>    
     </form>     
 </div>    
 </body>    
