--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -31,7 +31,7 @@
                 <input type="checkbox" name="check" id="check" class="form-check-input">    
                 <label for="check" class="form-check-label">Remember me</label>    
             </div>
-            <p>Forgot <a href="#">Password</a></p>    
+            <p>Forgot <a href="forgot-password">Password</a></p>    
         </form>     
     </div>
 </body>    
