Connect Invite button

--- a/views/forgot-password.handlebars
+++ b/views/forgot-password.handlebars
@@ -14,7 +14,17 @@
 </head>    
 <body>    
     <div class="container">
-        <h1 class="text-center">Forgot Password</h1>
+        <div class="row title">
+			<div class="col-sm d-flex align-items-center justify-content-start">
+				<a class="btn btn-warning bckBtn" href="/login" role="button">Back</a>
+    		</div>
+			<div class="col-sm d-flex justify-content-center">
+				<h1>Forgot Password</h1>
+			</div>
+			<div class="col-sm">
+			</div>
+		</div>
+
         <p>Enter your email to send an email to reset your password.</p>
         <form id="forgot-pass" method="get" action="/placeholder">    
             <div class="form-group">
@@ -24,11 +34,6 @@
                 <input type="button" name="submit" id="submit" class="form-control" value="Submit">       
             </div>
         </form>     
-        <div class="row">
-            <div class="col-2">
-                <a class="btn btn-warning bckBtn" href="/login" role="button">Back</a>
-            </div>
-        </div>
     </div>
 </body>    
 </html> 
