--- a/views/messages.handlebars
+++ b/views/messages.handlebars
@@ -1,6 +1,45 @@
 <!DOCTYPE html>    
 <html lang="en">    
 <head>    
-    <title>Messages</title>    
-	
+    <title>7 - Messages</title>    
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+	<script src="https://code.jquery.com/jquery.js"></script>
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+	<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.6.0/dist/umd/popper.min.js" integrity="sha384-KsvD1yqQ1/1+IA7gi3P0tyJcT3vR+NdBTt13hSJ2lnve8agRGXTTyNaBYmCR/Nwi" crossorigin="anonymous"></script>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.min.js" integrity="sha384-nsg8ua9HAw1y0W1btsyWgBklPnCUAFLuTMS2G72MMONqmOymq585AcH49TLBQObG" crossorigin="anonymous"></script>
+
+    <link rel="stylesheet" href="css/login.css">  
 </head>    
+<body>    
+    <div class="container">
+        <div class="row title">
+			<div class="col-sm d-flex align-items-center justify-content-start">
+				<a class="btn btn-warning bckBtn" href="/menu" role="button">Back</a>
+    		</div>
+			<div class="col-sm d-flex justify-content-center">
+				<h1>Messages</h1>
+			</div>
+			<div class="col-sm">
+			</div>
+		</div>
+        {{#each conversations}}
+        <div class="list-group">
+            <a href="#" class="list-group-item list-group-item-action">
+                <div class="d-flex w-100 justify-content-between">
+                    <div class="row">
+                        <p class="message-recipients">
+                            {{#each recipients}}
+                                {{first-name}}
+                            {{/each}}
+                        </p>
+                        <p>{{most-recent-message.author}}: {{most-recent-message.message}}</p>
+                    </div>
+                   <small>{{most-recent-message.date}} {{most-recent-message.time}}</small>
+                </div>
+            </a>
+        </div>
+        {{/each}} 
+    </div>
+</body>    
+</html> 
