--- a/views/invite-friends.handlebars
+++ b/views/invite-friends.handlebars
@@ -16,7 +16,8 @@
     <div class="container">
         <div class="row title">
 			<div class="col-sm d-flex align-items-center justify-content-start">
-				<a class="btn btn-warning bckBtn" href="/" role="button">Back</a>
+				{{!-- <a class="btn btn-warning bckBtn" href="/" role="button">Back</a> --}}
+				<a class="btn btn-warning bckBtn" href="/menu" role="button">Back</a>
     		</div>
 			<div class="col-sm d-flex justify-content-center">
 				<h1>Invite Friends</h1>
