--- a/views/your-videos.handlebars
+++ b/views/your-videos.handlebars
@@ -1,6 +1,6 @@
-<html>
+<!doctype html>
 <head>
-	<title>7 - A Social Technology for Student to Form a Study Group</title>
+	<title>7 - Your Videos</title>
 	<script src="https://code.jquery.com/jquery.js"></script>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	
@@ -8,37 +8,19 @@
 	<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.6.0/dist/umd/popper.min.js" integrity="sha384-KsvD1yqQ1/1+IA7gi3P0tyJcT3vR+NdBTt13hSJ2lnve8agRGXTTyNaBYmCR/Nwi" crossorigin="anonymous"></script>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.min.js" integrity="sha384-nsg8ua9HAw1y0W1btsyWgBklPnCUAFLuTMS2G72MMONqmOymq585AcH49TLBQObG" crossorigin="anonymous"></script>
 	<link href="/css/main.css" rel="stylesheet">
-	{{!-- <script src="js/index.js" type="text/javascript"></script> --}}
+	<script src="js/index.js" type="text/javascript"></script>
 </head>
 <body>
 	<div class="container">
-		<div class="row title">
+        <div class="row title">
 			<div class="col-sm d-flex align-items-center justify-content-start">
-				<a class="btn btn-warning " href="/menu" role="button">Menu</a>
-				<a class="btn btn-warning d-flex align-items-center ms-2" href="/newevent" role="button">
-					<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus" viewBox="0 0 16 16">
-						<path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/>
-					</svg>
-					Create
-				</a>
+				<a class="btn btn-warning bckBtn" href="/menu" role="button">Back</a>
     		</div>
 			<div class="col-sm d-flex justify-content-center">
-				<h1>Hello Jason</h1>
+				<h1>Your Videos</h1>
 			</div>
 			<div class="col-sm">
-				
 			</div>
-			
-		</div>
-		<div class="row">
-			<div class="col-2">
-    		</div>
-			<div class="col-sm d-flex justify-content-center">
-				<h3>Do you want to finished unwatched videos?</h3>
-			</div>
-			<div class="col-2">
-			</div>
-			
 		</div>
 		{{#each videos}}
 		<div class="row video-box">
@@ -51,9 +33,9 @@
 					<div class="card-body">
 						<h5 class="card-title">{{name}}</h5>
 						<p class="card-text">{{professor-name}}</p>
-						<div class="watch-invite" style="-display:none;">
+						<div class="watch-invite" style="display:none;">
 							<a href={{src}} class="btn btn-primary watch-btn">Watch</a>
-							{{!-- <a href="/invite-friends" class="btn invite-btn">Invite</a> --}}
+							<a href="/invite-friends" class="btn invite-btn">Invite</a>
 						</div>
 					</div>
 				</div>
