Update routes / links

--- a/views/newevent.handlebars
+++ b/views/newevent.handlebars
@@ -13,7 +13,7 @@
 	<div class="container">
 		<div class="row title">
 			<div class="col-sm-2 d-flex align-items-center justify-content-start">
-				<a class="btn btn-warning " href="/" role="button">Back</a>
+				<a class="btn btn-warning " href="/index" role="button">Back</a>
     		</div>
 			<div class="col-sm d-flex justify-content-center">
 				<h1>New Study Group Schedule</h1>
