--- a/views/menu.handlebars
+++ b/views/menu.handlebars
@@ -14,7 +14,7 @@
 	<div class="container">
 		<div class="row title">
 			<div class="col-sm d-flex align-items-center justify-content-start">
-				<a class="btn btn-warning bckBtn" href="/" role="button">Back</a>
+				<a class="btn btn-warning bckBtn" href="/index" role="button">Back</a>
     		</div>
 			<div class="col-sm d-flex justify-content-center">
 				<h1>Menu</h1>
