--- a/views/success.handlebars
+++ b/views/success.handlebars
@@ -69,7 +69,7 @@
                 <div class="col-sm-2"></div>
 				<div class="col-sm">
 					<a class="btn btn-outline-warning" href="/confirmation" role="button">Send Notification</a>
-                    <a class="btn btn-warning " href="/" role="button">Back to Home</a>
+                    <a class="btn btn-warning " href="/index" role="button">Back to Home</a>
 				</div>
 			</div>
 		</div>
