--- a/views/video.handlebars
+++ b/views/video.handlebars
@@ -28,7 +28,7 @@
         </div>
 	</div>
     <script src="https://vjs.zencdn.net/7.10.2/video.min.js"></script>
-    <script src="http://reference.dashif.org/dash.js/nightly/dist/dash.all.debug.js"></script>
+    <script src="https://reference.dashif.org/dash.js/nightly/dist/dash.all.debug.js"></script>
     <script src="/js/videojs-dash.min.js"></script>
     
     <script>
