--- a/views/newevent.handlebars
+++ b/views/newevent.handlebars
@@ -62,7 +62,7 @@
 			<div class="row mb-4">
 				<div class="col-sm-2"></div>
 				<div class="col-sm">
-					<a class="btn btn-warning " href="/invitation" role="button">Invite</a>
+					<a class="btn btn-warning " href="/confirmation" role="button">Invite</a>
 					<a class="btn btn-warning " href="/confirmation" role="button">Next</a>
 				</div>
 			</div>
