--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,7 +1,7 @@
 <!DOCTYPE html>    
 <html lang="en">    
 <head>    
-    <title>Login Form</title>    
+    <title>7 - Login</title>    
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 	<script src="https://code.jquery.com/jquery.js"></script>
@@ -9,8 +9,13 @@
 	<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.6.0/dist/umd/popper.min.js" integrity="sha384-KsvD1yqQ1/1+IA7gi3P0tyJcT3vR+NdBTt13hSJ2lnve8agRGXTTyNaBYmCR/Nwi" crossorigin="anonymous"></script>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.min.js" integrity="sha384-nsg8ua9HAw1y0W1btsyWgBklPnCUAFLuTMS2G72MMONqmOymq585AcH49TLBQObG" crossorigin="anonymous"></script>
 
+    <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-auth.js"></script>
+    {{!-- <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-database.js"></script> --}}
+    <script src="js/firebase-init.js" type="module"></script>
+    <script src="js/login.js" type="module"></script>
+
     <link rel="stylesheet" href="css/login.css">    
-    <script src="js/login.js" type="text/javascript"></script>
 </head>    
 <body>    
     <script>
