--- a/views/menu.handlebars
+++ b/views/menu.handlebars
@@ -1,13 +1,18 @@
 <html>
 <head>
 	<title>7 - A Social Technology for Student to Form a Study Group</title>
-	<script src="https://code.jquery.com/jquery.js"></script>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	
+	<script src="https://code.jquery.com/jquery.js"></script>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
 	<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.6.0/dist/umd/popper.min.js" integrity="sha384-KsvD1yqQ1/1+IA7gi3P0tyJcT3vR+NdBTt13hSJ2lnve8agRGXTTyNaBYmCR/Nwi" crossorigin="anonymous"></script>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.min.js" integrity="sha384-nsg8ua9HAw1y0W1btsyWgBklPnCUAFLuTMS2G72MMONqmOymq585AcH49TLBQObG" crossorigin="anonymous"></script>
 	<script src="/js/bootstrap.min.js"></script>
+
+    <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-auth.js"></script>
+    <script src="js/firebase-init.js" type="module"></script>
+	<script src="js/menu.js" type="module"></script>
 	<link href="/css/main.css" rel="stylesheet">
 </head>
 <body>
@@ -27,7 +32,7 @@
 			<div class="col-2">
     		</div>
 			<div class="col-sm d-flex justify-content-center">
-                <a class="btn btn-warning btn-lg" href={{src}} role="button">{{title}}</a>
+                <a id={{id}} class="btn btn-warning btn-lg" href={{src}} role="button">{{title}}</a>
 			</div>
 			<div class="col-2">
 			</div>
