--- a/views/invite-friends.handlebars
+++ b/views/invite-friends.handlebars
@@ -32,5 +32,15 @@
         </div>
         {{/each}} 
     </div>
+    <form id="addFriendForm" role="form" method="get" action="/add">
+			<h3>Invite a friend</h3>
+			<div class="form-group">
+			<label for="name">Name:</label>
+			<input type="text" class="form-control" id="name" placeholder="Name" name="name">
+			</div>
+			<input type="submit" id="submitBtn" class="btn btn-default" value="Invite a friend"></input>
+		</form>
+		</div>
+	<script src="./js/hci-friends.js"></script>
 </body>    
 </html> 
