--- a/views/friends.handlebars
+++ b/views/friends.handlebars
@@ -9,6 +9,12 @@
 	<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.6.0/dist/umd/popper.min.js" integrity="sha384-KsvD1yqQ1/1+IA7gi3P0tyJcT3vR+NdBTt13hSJ2lnve8agRGXTTyNaBYmCR/Nwi" crossorigin="anonymous"></script>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.min.js" integrity="sha384-nsg8ua9HAw1y0W1btsyWgBklPnCUAFLuTMS2G72MMONqmOymq585AcH49TLBQObG" crossorigin="anonymous"></script>
 
+    <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-database.js"></script>
+    <script src="js/firebase-init.js" type="module"></script>
+	<script src="js/friends.js" type="module"></script>
+
     <link rel="stylesheet" href="css/login.css">    
 </head>    
 <body>    
@@ -23,11 +29,9 @@
 			<div class="col-sm">
 			</div>
 		</div>
-        {{#each friends}}
-        <div class=row>
-            <p>{{first-name}} {{last-name}}</p>
-        </div>
-        {{/each}} 
+		<div class="list-group" id="friend-list-container">
+			{{!-- will be filled with friends using JS --}}
+		</div>
     </div>
 </body>    
 </html> 
