--- a/views/menu.handlebars
+++ b/views/menu.handlebars
@@ -11,6 +11,7 @@
 
     <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-database.js"></script>
     <script src="js/firebase-init.js" type="module"></script>
 	<script src="js/menu.js" type="module"></script>
 	<link href="/css/main.css" rel="stylesheet">
