--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -10,6 +10,7 @@
 
     <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-database.js"></script>
     <script src="js/firebase-init.js" type="module"></script>
 	<script src="js/index.js" type="module"></script>
 
