Add send notification interface

--- a/views/success.handlebars
+++ b/views/success.handlebars
@@ -68,7 +68,7 @@
             <div class="row mb-4">
                 <div class="col-sm-2"></div>
 				<div class="col-sm">
-					<button class="btn btn-outline-warning" role="button" onclick="window.alert('Notification Sent!');">Send Notification</button>
+					<a class="btn btn-outline-warning" role="button" href="/notification">Send Notification</a>
                     <a class="btn btn-warning " href="/index" role="button">Back to Home</a>
 				</div>
 			</div>
