--- a/views/invite-friends.handlebars
+++ b/views/invite-friends.handlebars
@@ -1,13 +1,38 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title>Invite Friends</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="css/invite-friends.css">  
-</head>
-<body> 
+<!DOCTYPE html>    
+<html lang="en">    
+<head>    
+    <title>7 - Invite Friends</title>    
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<div id="facebook_invite"></div>
+  <script src="https://code.jquery.com/jquery.js"></script>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.6.0/dist/umd/popper.min.js" integrity="sha384-KsvD1yqQ1/1+IA7gi3P0tyJcT3vR+NdBTt13hSJ2lnve8agRGXTTyNaBYmCR/Nwi" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.min.js" integrity="sha384-nsg8ua9HAw1y0W1btsyWgBklPnCUAFLuTMS2G72MMONqmOymq585AcH49TLBQObG" crossorigin="anonymous"></script>
+
+    <link rel="stylesheet" href="css/login.css">    
+    <script src="js/inviteFriends.js" type="text/javascript"></script>
+</head>    
+<body>    
+    <div class="container">
+        <div class="row title">
+      <div class="col-sm d-flex align-items-center justify-content-start">
+        {{!-- <a class="btn btn-warning bckBtn" href="/" role="button">Back</a> --}}
+        <a class="btn btn-warning bckBtn" href="/menu" role="button">Back</a>
+        </div>
+      <div class="col-sm d-flex justify-content-center">
+        <h1>Invite Friends</h1>
+      </div>
+      <div class="col-sm">
+      </div>
+    </div>
+
+        {{#each friends}}
+        <div class=row>
+            <p>{{first-name}} {{last-name}}</p>
+        </div>
+        {{/each}} 
+    </div>
+    <div id="facebook_invite"></div>
 <script src="http://connect.facebook.net/en_US/all.js"></script>
 <a href="#" onclick="FBInvite()">Invite Facebook Friends</a>
 <script>
@@ -36,3 +61,5 @@
 </body>
 </html>
 
+</body>    
+</html> 
