--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -3,11 +3,14 @@
 <head>    
     <title>7 - Login</title>    
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+  {{> facebook}}
+  <script src="/js/login.js"></script>
 
 	<script src="https://code.jquery.com/jquery.js"></script>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
 	<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.6.0/dist/umd/popper.min.js" integrity="sha384-KsvD1yqQ1/1+IA7gi3P0tyJcT3vR+NdBTt13hSJ2lnve8agRGXTTyNaBYmCR/Nwi" crossorigin="anonymous"></script>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.min.js" integrity="sha384-nsg8ua9HAw1y0W1btsyWgBklPnCUAFLuTMS2G72MMONqmOymq585AcH49TLBQObG" crossorigin="anonymous"></script>
+  
 
     <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-auth.js"></script>
@@ -17,11 +20,12 @@
 
     <link rel="stylesheet" href="css/login.css">    
 </head>    
-<body>    
+<body>   
+<div class = "login-page"> 
     <script>
       window.fbAsyncInit = function() {
         FB.init({
-          appId      : 272022877635789,
+          appId      : 422262695540851,
           cookie     : true,
           xfbml      : true,
           version    : 'v3.2'
