--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -21,7 +21,7 @@
     <script>
       window.fbAsyncInit = function() {
         FB.init({
-          appId      : 422262695540851,
+          appId      : '422262695540851',
           cookie     : true,
           xfbml      : true,
           version    : 'v3.2'
