--- a/views/partials/facebook.handlebars
+++ b/views/partials/facebook.handlebars
@@ -2,7 +2,7 @@
 <script>
   window.fbAsyncInit = function() {
     FB.init({
-      appId      : 272022877635789,
+      appId      : '42262695549851',
       cookie     : true,
       xfbml      : true,
       version    : 'v3.2'
