--- a/views/schedule.handlebars
+++ b/views/schedule.handlebars
@@ -33,7 +33,7 @@
                 </div>
                  <div class="schedule">
                      {{#each schedule}}
-                    <div class="schedule-unit" style=" grid-row-start:{{start}}; grid-row-end: span {{end-start}};  border-style:solid red;"><b>{{title}}</b><p>{{Participants}}</p></div>
+                    <div class="schedule-unit" style=" grid-row-start:{{start}}; grid-row-end: {{end}};  border-style:solid red;"><b>{{title}}</b><p>{{Participants}}</p></div>
                     {{/each}}
                 </div>
             </div>
