--- a/views/newevent.handlebars
+++ b/views/newevent.handlebars
@@ -8,6 +8,7 @@
 	<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.6.0/dist/umd/popper.min.js" integrity="sha384-KsvD1yqQ1/1+IA7gi3P0tyJcT3vR+NdBTt13hSJ2lnve8agRGXTTyNaBYmCR/Nwi" crossorigin="anonymous"></script>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.min.js" integrity="sha384-nsg8ua9HAw1y0W1btsyWgBklPnCUAFLuTMS2G72MMONqmOymq585AcH49TLBQObG" crossorigin="anonymous"></script>
 	<link href="/css/main.css" rel="stylesheet">
+	
 </head>
 <body>
 	<div class="container">
@@ -36,7 +37,7 @@
 			<div class="row mb-4">
 				<label for="lecture" class="col-sm-2 col-form-label">Lecture</label>
 				<div class="col-sm-10">
-					<select class="form-select" aria-label="Default select example">
+					<select class="form-select" aria-label="Default select example" id="lecture-Select">
 						<option selected>Open this select menu</option>
 						<option value="1">CSE 170- Lecture 1</option>
 						<option value="2">CSE 170- Lecture 2</option>
@@ -48,7 +49,7 @@
 			<div class="row mb-4">
 				<label for="date" class="col-sm-2 col-form-label">Date</label>
 				<div class="col-sm-10">
-   					 <input class="form-control" type="date" value="2011-08-19" id="date-input">
+   					 <input class="form-control" type="date" value="2021-03-03" id="date-input">
   				</div>
 			</div>
 
@@ -63,9 +64,10 @@
 				<div class="col-sm-2"></div>
 				<div class="col-sm">
 					<a class="btn btn-warning " href="/confirmation" role="button">Invite</a>
-					<a class="btn btn-warning " href="/confirmation" role="button">Next</a>
+					<a class="btn btn-warning " id="nextBtn" role="button">Next</a>
 				</div>
 			</div>
 		</div>
+		<script src="/js/newevent.js"></script>
 </body>
 </html>
