--- a/views/facebookinvite.handlebars
+++ b/views/facebookinvite.handlebars
@@ -1,3 +1,4 @@
+{{!-- Don't think this file is used anywhere --}}
 <!doctype html>
 
 <html>
@@ -17,9 +18,9 @@
     <![endif]-->
 
 	<script src="https://code.jquery.com/jquery.js"></script>
-	<script src="/js/bootstrap.min.js"></script>
-	<script src="/js/facebook.js"></script> {{> facebook}}
-<script src="/js/facebook.js"></script>
+	<script src="js/bootstrap.min.js"></script>
+	<script src="js/facebook.js"></script> {{> facebook}}
+	<script src="js/facebook.js"></script>
 </head>
 
 <body>
