--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -12,8 +12,9 @@
     <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-database.js"></script>
     <script src="js/firebase-init.js" type="module"></script>
+	{{>facebook}}
+	<script src="/js/facebook.js"></script>
 	<script src="js/index.js" type="module"></script>
-
 	<link href="/css/main.css" rel="stylesheet">
 </head>
 <body>
