--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -13,29 +13,12 @@
     <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-database.js"></script>
     <script src="js/firebase-init.js" type="module"></script>
+    {{>facebook}}
+	<script src="/js/facebook.js"></script>
     <script src="js/login.js" type="module"></script>
-
     <link rel="stylesheet" href="css/login.css">    
 </head>    
 <body>    
-    <script>
-      window.fbAsyncInit = function() {
-        FB.init({
-          appId      : '422262695540851',
-          cookie     : true,
-          xfbml      : true,
-          version    : 'v3.2'
-        });
-      };
-      (function(d, s, id){
-         var js, fjs = d.getElementsByTagName(s)[0];
-         if (d.getElementById(id)) {return;}
-         js = d.createElement(s); js.id = id;
-             js.src = "https://connect.facebook.net/en_US/sdk.js";
-             fjs.parentNode.insertBefore(js, fjs);
-           }(document, 'script', 'facebook-jssdk'));
-
-    </script>
     <div class="container">
         <h1 class="text-center">7</h1>
         <form id="login" method="get" action="/placeholder">    
