--- a/views/partials/facebook.handlebars
+++ b/views/partials/facebook.handlebars
@@ -1,13 +1,16 @@
 <!-- Replace all code under this line with your copied script -->
+<!-- Replace all code under this line with your copied script -->
 <script>
   window.fbAsyncInit = function() {
     FB.init({
-      appId      : '42262695549851',
+      appId      : '831817101010388',
       cookie     : true,
       xfbml      : true,
       version    : 'v3.2'
     });
+     FB.AppEvents.logPageView();
   };
+
   (function(d, s, id){
      var js, fjs = d.getElementsByTagName(s)[0];
      if (d.getElementById(id)) {return;}
@@ -15,5 +18,4 @@
      js.src = "//connect.facebook.net/en_US/sdk.js";
      fjs.parentNode.insertBefore(js, fjs);
    }(document, 'script', 'facebook-jssdk'));
-
 </script>
