--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -46,7 +46,7 @@
 			<div class="col-2">
     		</div>
 			<div class="col-sm d-flex justify-content-center">
-				<h3>Do you want to finished unwatched videos?</h3>
+				<h3>Do you want to finish unwatched videos?</h3>
 			</div>
 			<div class="col-2">
 			</div>
@@ -55,20 +55,18 @@
 		{{#each videos}}
 		<div class="row video-box">
 			<div class="d-flex justify-content-center">
-				<div class="card" style="width: 30rem;">
-					<div class="card-header">
-						{{title}}
-					</div>
-					<img src={{img}} class="img-thumbnail">
-					<div class="card-body">
-						<h5 class="card-title">{{name}}</h5>
-						<p class="card-text">{{professor-name}}</p>
-						<div class="watch-invite" style="-display:none;">
-							<a href={{src}} class="btn btn-primary watch-btn">Watch</a>
-							{{!-- <a href="/invite-friends" class="btn invite-btn">Invite</a> --}}
+					<div class="card" style="width: 30rem;">
+				<a href={{src}} style="text-decoration: none;color: black;">
+						<div class="card-header">
+							{{title}}
 						</div>
+						<img src={{img}} load="lazy" class="img-thumbnail">
+						<div class="card-body">
+							<h5 class="card-title">{{name}}</h5>
+							<p class="card-text">{{professor-name}}</p>
+						</div>
+				</a>
 					</div>
-				</div>
 			</div>
 		</div>
 		{{/each}}
