--- a/views/menu.handlebars
+++ b/views/menu.handlebars
@@ -15,6 +15,7 @@
     <script src="js/firebase-init.js" type="module"></script>
 	<script src="js/menu.js" type="module"></script>
 	<link href="/css/main.css" rel="stylesheet">
+	<link href="/css/menu.css" rel="stylesheet">
 </head>
 <body>
 	<div class="container">
