--- a/views/your-videos.handlebars
+++ b/views/your-videos.handlebars
@@ -8,7 +8,7 @@
 	<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.6.0/dist/umd/popper.min.js" integrity="sha384-KsvD1yqQ1/1+IA7gi3P0tyJcT3vR+NdBTt13hSJ2lnve8agRGXTTyNaBYmCR/Nwi" crossorigin="anonymous"></script>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.min.js" integrity="sha384-nsg8ua9HAw1y0W1btsyWgBklPnCUAFLuTMS2G72MMONqmOymq585AcH49TLBQObG" crossorigin="anonymous"></script>
 	<link href="/css/main.css" rel="stylesheet">
-	<script src="js/your-videos.js" type="text/javascript"></script>
+	{{!-- <script src="js/your-videos.js" type="text/javascript"></script> --}}
 </head>
 <body>
 	<div class="container">
@@ -26,18 +26,20 @@
 		<div class="row video-box">
 			<div class="d-flex justify-content-center">
 				<div class="card" style="width: 30rem;">
-					<div class="card-header">
-						{{title}}
-					</div>
-					<img src={{img}} class="img-thumbnail">
-					<div class="card-body">
-						<h5 class="card-title">{{name}}</h5>
-						<p class="card-text">{{professor-name}}</p>
-						<div class="watch-invite" style="display:none;">
-							<a href={{src}} class="btn btn-primary watch-btn">Watch</a>
-							<a href="/invite-friends" class="btn invite-btn">Invite</a>
+					<a href={{src}} style="text-decoration: none;color: black;">
+						<div class="card-header">
+							{{title}}
 						</div>
-					</div>
+						<img src={{img}} class="img-thumbnail">
+						<div class="card-body">
+							<h5 class="card-title">{{name}}</h5>
+							<p class="card-text">{{professor-name}}</p>
+							<div class="watch-invite" style="display:none;">
+								<a href={{src}} class="btn btn-primary watch-btn">Watch</a>
+								<a href="/invite-friends" class="btn invite-btn">Invite</a>
+							</div>
+						</div>
+					</a>
 				</div>
 			</div>
 		</div>
