Remove invite button

--- a/views/newevent.handlebars
+++ b/views/newevent.handlebars
@@ -63,7 +63,7 @@
 			<div class="row mb-4">
 				<div class="col-sm-2"></div>
 				<div class="col-sm">
-					<a class="btn btn-warning " href="/confirmation" role="button">Invite</a>
+					{{!-- <a class="btn btn-warning " href="/confirmation" role="button">Invite</a> --}}
 					<a class="btn btn-warning " id="nextBtn" role="button">Next</a>
 				</div>
 			</div>
