--- a/views/sign-up.handlebars
+++ b/views/sign-up.handlebars
@@ -1,7 +1,7 @@
 <!DOCTYPE html>    
 <html lang="en">    
 <head>    
-    <title>7 - Login</title>    
+    <title>7 - Sign Up</title>    
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 	<script src="https://code.jquery.com/jquery.js"></script>
@@ -13,9 +13,7 @@
     <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-database.js"></script>
     <script src="js/firebase-init.js" type="module"></script>
-    {{>facebook}}
-	<script src="/js/facebook.js"></script>
-    <script src="js/login.js" type="module"></script>
+    <script src="js/sign-up.js" type="text/javascript"></script>
     <link rel="stylesheet" href="css/login.css">    
 </head>    
 <body>    
@@ -27,24 +25,16 @@
                 <input type="text" name="Uname" id="Uname" class="form-control" placeholder="Username">    
             </div>
             <div class="form-group">
-                <label for="pass">Password</label>    
-                <input type="Password" name="Pass" id="Pass" class="form-control"placeholder="Password">    
-            </div>
-            <div class="form-check">
-                <input type="checkbox" name="check" id="check" class="form-check-input">    
-                <label for="check" class="form-check-label">Remember me</label>    
+                <label for="Pass">Password</label>    
+                <input type="Password" name="Pass" id="Pass" class="form-control" placeholder="Password">    
             </div>
             <div class="form-group">
-                <input type="button" name="log" id="log" class="form-control" value="Log In Here">       
+                <label for="confirm-pass">Confirm Password</label>
+                <input type="password" name="CPass" id="confirm-pass" class="form-control" placeholder="Confirm password">
             </div>
-            <p>Forgot <a href="forgot-password">Password</a></p>
-            <h4 id="facebookUsername" class="text-center"></h4>
-            <p class="facebookLogin">Login through Facebook 
-                <fb:login-button scope="public_profile,email" onlogin="checkLoginState();"></fb:login-button><br>
-                <a href="https://www.facebook.com/help/570785306433644?helpref=hc_global_nav">Facebook help</a>
-            </p>
-
-            <p><a href="/sign-up">Sign up</a></p>
+            <div class="form-group">
+                <input type="button" name="sign-up" id="sign-up-btn" class="form-control" value="Sign Up">       
+            </div>
         </form>     
     </div>
 </body>    
