Make friends consistent

--- a/views/notification.handlebars
+++ b/views/notification.handlebars
@@ -81,6 +81,22 @@
                         </div>
                     </td>
                     </tr>
+
+                    <tr>
+                    <th scope="row">4</th>
+                    <td>Vincent</td>
+                    <td>
+                        Unset 
+                        <button type="button" class="btn btn-primary btn-sm setBtn" >Set</button>
+                    </td>
+                    <td>
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                            <label class="form-check-label" for="flexCheckDefault">
+                            </label>
+                        </div>
+                    </td>
+                    </tr>
                 </tbody>
             </table>
             
