--- a/views/confirmation.handlebars
+++ b/views/confirmation.handlebars
@@ -55,7 +55,7 @@
 			</div>
 
 			<div class="row mb-4">
-				<label for="time-input" class="col-sm-2 col-form-label">Friend List</label>
+				<label for="time-input" class="col-sm-2 col-form-label">Select friends</label>
 				<div class="col-sm">
 					<ul class="list-group">
                         <li class="list-group-item">Alex</li>
