--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -20,7 +20,7 @@
 </head>    
 <body>    
     <div class="container">
-        <h1 class="text-center">7</h1>
+        <h1 class="text-center">7 - Study Group</h1>
         <form id="login" method="get" action="/placeholder">    
             <div class="form-group">
                 <label for="Uname">Email</label>    
