--- a/views/invite-friends.handlebars
+++ b/views/invite-friends.handlebars
@@ -20,7 +20,7 @@
 				<a class="btn btn-warning bckBtn" href="/menu" role="button">Back</a>
     		</div>
 			<div class="col-sm d-flex justify-content-center">
-				<h1>Invite Friends</h1>
+				<h1>Invite Friends under construction</h1>
 			</div>
 			<div class="col-sm">
 			</div>
