Add cancel button

--- a/views/sign-up.handlebars
+++ b/views/sign-up.handlebars
@@ -35,6 +35,8 @@
             <div class="form-group">
                 <input type="button" name="sign-up" id="sign-up-btn" class="form-control" value="Sign Up">       
             </div>
+                <input type="button" name="cancel" id="cancel-btn" class="form-control" value="Cancel">       
+            </div>
         </form>     
     </div>
 </body>    
