Change username to email

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -24,7 +24,7 @@
         <form id="login" method="get" action="/placeholder">    
             <div class="form-group">
                 <label for="Uname">Email</label>    
-                <input type="text" name="Uname" id="Uname" class="form-control" placeholder="Username">    
+                <input type="text" name="Uname" id="Uname" class="form-control" placeholder="Email">    
             </div>
             <div class="form-group">
                 <label for="pass">Password</label>    
