--- a/views/sign-up.handlebars
+++ b/views/sign-up.handlebars
@@ -22,7 +22,7 @@
         <form id="login" method="get" action="/placeholder">    
             <div class="form-group">
                 <label for="Uname">Email</label>    
-                <input type="text" name="Uname" id="Uname" class="form-control" placeholder="Username">    
+                <input type="text" name="Uname" id="Uname" class="form-control" placeholder="Email">    
             </div>
             <div class="form-group">
                 <label for="Pass">Password</label>    
